--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ifconfig-me",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Discovers your public IP address using pre-defined checkers (external services).",
   "homepage": "https://github.com/tajpouria/ifconfig-me#readme",
   "author": "Pouria Taj <tajpouria.dev@gmail.com> (https://tajpouria.com/)",
@@ -25,15 +25,15 @@
   ],
   "license": "ISC",
   "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
-    "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "isomorphic-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@types/jest": "^28.1.6",
     "@types/node": "^18.0.5",
     "@types/node-fetch": "^3.0.2",
     "jest": "^28.1.3",
-    "ts-jest": "^28.0.7"
+    "prettier": "^2.7.1",
+    "ts-jest": "^28.0.7",
+    "typescript": "^4.7.4"
   }
 }
